fixes for schedule on mobile

--- a/src/pages/Schedule/MonthView.module.scss
+++ b/src/pages/Schedule/MonthView.module.scss
@@ -4,18 +4,6 @@
     flex: 1;
 }
 
-.title {
-    display: flex;
-    color: var(--text-color);
-    align-items: center;
-    justify-content: center;
-}
-
-.title div {
-    margin-left: 0.25em !important;
-    margin-right: 0.25em !important;
-}
-
 .grid {
     display: grid;
     flex-direction: column;
