--- a/src/pages/Schedule/MonthView/Day.module.scss
+++ b/src/pages/Schedule/MonthView/Day.module.scss
@@ -5,7 +5,7 @@
     border-top: 1px solid transparent;
     border-bottom: 1px solid var(--border-color);
     border-right: 1px solid var(--border-color);
-    padding: 0.5em;
+    padding: 0.25em;
 }
 
 .title {
@@ -36,7 +36,7 @@
 .sessions {
     display: flex;
     flex-wrap: wrap;
-    align-items: center;
+    align-items: flex-end;
     justify-content: flex-end;
     flex: 1;
 }
